--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
   <!--todo------------------------ Open Graph Protocol -------------------------->
   <meta property="og:title" content="Origin Dev">
+  <meta property="og:description" content="Команда разработки IT-продуктов и решения Ваших бизнес-задач. Создаём новое с 2020 года.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://https://origin-dev.tech/">
   <meta property="og:image" content="https://origin-dev.tech/og-icon.jpg">
+  <meta property="og:locale" content="ru-RU" />
 
   <!-------------------------- Favicon -------------------------->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
