--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:description" content="Команда разработки IT-продуктов и решения Ваших бизнес-задач. Создаём новое с 2020 года.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://https://origin-dev.tech/">
-  <meta property="og:image" content="https://origin-dev.tech/og-icon.jpg">
-  <meta property="og:locale" content="ru-RU" />
+  <meta property="og:image" content="https://origin-dev.tech/og-icon.png">
+  <!-- <meta property="og:locale" content="ru-RU"> -->
 
   <!-------------------------- Favicon -------------------------->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
