--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Origin Dev">
   <meta property="og:description" content="Команда разработки IT-продуктов и решения Ваших бизнес-задач. Создаём новое с 2020 года.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://https://origin-dev.tech/">
+  <meta property="og:url" content="https://origin-dev.tech/">
   <meta property="og:image" content="https://origin-dev.tech/og-icon.png">
   <!-- <meta property="og:locale" content="ru-RU"> -->
 
