--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--todo------------------------ Open Graph Protocol -------------------------->
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://origin-dev.tech/">
+  <meta property="og:type" content="website">
   <meta property="og:title" content="Origin Dev">
   <meta property="og:description" content="Команда разработки IT-продуктов и решения Ваших бизнес-задач. Создаём новое с 2020 года.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://origin-dev.tech/">
   <meta property="og:image" content="https://origin-dev.tech/og-icon.png">
-  <!-- <meta property="og:locale" content="ru-RU"> -->
+  <meta property="og:locale" content="ru-RU">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="origin-dev.tech">
+  <meta property="twitter:url" content="https://origin-dev.tech/">
+  <meta name="twitter:title" content="Origin Dev">
+  <meta name="twitter:description" content="Команда разработки IT-продуктов и решения Ваших бизнес-задач. Создаём новое с 2020 года.">
+  <meta name="twitter:image" content="https://origin-dev.tech/og-icon.png">
 
   <!-------------------------- Favicon -------------------------->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
