Scroll and dummy for projects page added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/glide.core.min.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/header.css">
 </head>
 
 <body>
@@ -68,7 +69,7 @@
       <span class="header__ham-line"></span>
       <span class="header__ham-line"></span>
       <span class="header__ham-line"></span>
-    </button>
+    </div>
   </header>
 
   <main>
@@ -175,7 +176,7 @@
         
       </div>
       <div class="projects__more">
-        <a href="#" class="projects__more-link">Больше работ</a>
+        <a href="./projects.html#0" class="projects__more-link">Больше работ</a>
       </div>
     </section>
     <section class="header-fix" id="achievements">
@@ -369,6 +370,7 @@
 
   <!-------------------------- Scripts -------------------------->
   <script src="./js/glide.min.js"></script>
+  <script src="./js/smooth-scroll.polyfills.min.js"></script>
   <script src="./js/main.js"></script>
  
   <!--todo------------------------ Google Analytics -------------------------->
