Slider animated autoplay

--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,10 @@
     </div>
   </header>
 
+  <main>
+    
+  </main>
+
 
   <!-------------------------- Scripts -------------------------->
   <script src="./js/main.js"></script>
