--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <link rel="stylesheet" href="./css/header.css">
 </head>
 
-<body>
+<body class="preload-transition">
 
   <!-------------------------- Content -------------------------->
   <header class="header">
