Projects page's been added

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
   <!-------------------------- Styles -------------------------->
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/glide.core.min.css">
-  <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body class="preload-transition">
@@ -372,6 +373,7 @@
   <script src="./js/glide.min.js"></script>
   <script src="./js/smooth-scroll.polyfills.min.js"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/header.js"></script>
  
   <!--todo------------------------ Google Analytics -------------------------->
   <!--! Change UA-XXXXX-Y to be your site's ID. -->
