Projects card rendering

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
     <span class="sr-only">Подняться выше</span>
   </a>
 
+  <!-------------------------- Templates -------------------------->
   <template id="projects__template">
     <div class="projects__card project-card">
       <picture class="project-card__image">
