projects background parallax added

--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,18 @@
   </header>
 
   <main>
+    <picture>
+      <source
+        srcset="./img/projects-background.webp"
+        type="image/webp">
+      <source
+        srcset="./img/projects-background.jpg"
+        type="image/jpg">
+      <img
+        class="projects__background-image"
+        style="transition-duration: 0s;"
+        alt="Задний фон">
+    </picture>
     <section class="projects max-width-1120">
       <h1 class="projects__header">Проекты</h1>
       <div class="projects__content">
