--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <meta name="twitter:image" content="https://origin-dev.tech/og-icon.png">
 
   <!-------------------------- Favicon -------------------------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2998ff">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#2998ff">
   <meta name="msapplication-TileColor" content="#2998ff">
   <meta name="theme-color" content="#ffffff">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
@@ -174,7 +174,7 @@
     <section class="projects max-width-1120 header-fix" id="projects">
       <h2 class="projects__header">Наши проекты</h2>
       <div class="projects__content">
-        
+
       </div>
       <div class="projects__more">
         <a href="./projects.html#0" class="projects__more-link">Больше работ</a>
@@ -375,7 +375,7 @@
   <script src="./js/smooth-scroll.polyfills.min.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/header.js"></script>
- 
+
   <!--todo------------------------ Google Analytics -------------------------->
   <!--! Change UA-XXXXX-Y to be your site's ID. -->
   <!-- <script>
