--- a/projects.html
+++ b/projects.html
@@ -25,11 +25,11 @@
   <meta name="twitter:image" content="https://origin-dev.tech/og-icon.png">
 
   <!-------------------------- Favicon -------------------------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2998ff">
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#2998ff">
   <meta name="msapplication-TileColor" content="#2998ff">
   <meta name="theme-color" content="#ffffff">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
@@ -47,21 +47,21 @@
   <!-------------------------- Content -------------------------->
   <header class="header">
     <nav class="header__content max-width-1120">
-      <a class="header__logo-link" href="/#hero"><svg class="header__logo" viewBox="0 0 563 646" width="56">
+      <a class="header__logo-link" href="./index.html#hero"><svg class="header__logo" viewBox="0 0 563 646" width="56">
         <use xlink:href="./img/sprite.svg#logo"></use>
       </svg><span class="sr-only">На главную</span></a>
       <ul class="header__list">
         <li class="header__list-item">
-          <a class="header__link" href="/#hero">Главная</a>
+          <a class="header__link" href="./index.html#hero">Главная</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="/#projects">Проекты</a>
+          <a class="header__link" href="./index.html#projects">Проекты</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="/#achievements">Достижения</a>
+          <a class="header__link" href="./index.html#achievements">Достижения</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="/#contacts">Контакты</a>
+          <a class="header__link" href="./index.html#contacts">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -173,7 +173,7 @@
   <script src="./js/smooth-scroll.polyfills.min.js"></script>
   <script src="./js/header.js"></script>
   <script src="./js/projects.js"></script>
- 
+
   <!--todo------------------------ Google Analytics -------------------------->
   <!--! Change UA-XXXXX-Y to be your site's ID. -->
   <!-- <script>
