Fix footer projects file link

--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
   <footer class="footer">
     <div class="footer__content max-width-1120">
       <div class="footer__links">
-        <a class="footer__logo-link" href="/#hero">
+        <a class="footer__logo-link" href="./index.html#hero">
           <svg class="footer__logo" viewBox="0 0 563 646" width="56">
             <use xlink:href="./img/sprite.svg#logo"></use>
           </svg>
