--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="root">
     <section class="hero" id="hero">
       <div class="hero__content">
         <div class="hero__content-wrapper">
